# MyProjects

./: .gitignore  .gitignore~  README.md
Checkers/: CMakeLists.txt  CTestTestfile.cmake  Checkers.cbp  Diagram.dia  Makefile  cmake_install.cmake  main.cpp
Checkers/SFML/: CMakeCache.txt  Makefile  SFMLSharedTargets.cmake  changelog.md  cmake_install.cmake  install_manifest.txt
Checkers/SFML/doc/: doxyfile.in
Checkers/SFML/lib/: libsfml-audio.so.2.5.0  libsfml-graphics.so.2.5.0  libsfml-network.so.2.5.0  libsfml-system.so.2.5.0  libsfml-window.so.2.5.0
Checkers/SFML/src/SFML/: Makefile  cmake_install.cmake
Checkers/SFML/src/SFML/Audio/: Makefile  cmake_install.cmake
Checkers/SFML/src/SFML/Graphics/: Makefile  cmake_install.cmake
Checkers/SFML/src/SFML/Network/: Makefile  cmake_install.cmake
Checkers/SFML/src/SFML/System/: Makefile  cmake_install.cmake
Checkers/SFML/src/SFML/Window/: Makefile  cmake_install.cmake
Checkers/Tests/: CMakeLists.txt  CTestTestfile.cmake  MainWindowTests.cpp  Makefile  cmake_install.cmake
Checkers/cmake_modules/: FindSFML.cmake
Checkers/googletest/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
Checkers/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Checkers/googletest/googlemock/docs/: CheatSheet.md  CookBook.md  FrequentlyAskedQuestions.md
Checkers/googletest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Checkers/googletest/googlemock/scripts/generator/cpp/: ast.py  tokenize.py
Checkers/googletest/googlemock/test/: gmock_output_test.py
Checkers/googletest/googletest/: CMakeCache.txt  Makefile  cmake_install.cmake
Checkers/inc/: Button.h  Callable.h  Clickable.h  Exceptions.h  Game.h  MainWindow.h  Piece.h  Player.h
Checkers/src/: Button.cpp  Game.cpp  MainWindow.cpp  Piece.cpp  Player.cpp
GameInPyGame/: Game.py
PARANOID/: CMakeLists.txt  Makefile  PARANOID.cbp  cmake_install.cmake
PARANOID/Resoures/Sprites/: Hero.piskel
PARANOID/mocks/: MockSfColor.cpp
PARANOID/src/: CMakeLists.txt  Makefile  main.cpp
PARANOID/src/include/: BasicModule.hpp  EngineModule.hpp  Logger.hpp  MainWindow.hpp
PARANOID/src/include/Buttons/: LetterButton.hpp  NormalButton.hpp
PARANOID/src/include/Detectors/: CollisionDetector.hpp  EventDetector.hpp
PARANOID/src/include/Factories/: DetectorsFactory.hpp
PARANOID/src/include/Interface/: ICallable.hpp  IClickable.hpp  IDetector.hpp
PARANOID/src/include/Windows/: MainWindow.hpp
PARANOID/src/sources/: BasicModule.cpp  EngineModule.cpp  Logger.cpp  MainWindow.cpp
PARANOID/src/sources/Buttons/: LetterButton.cpp  NormalButton.cpp
PARANOID/src/sources/Detectors/: CollisionDetector.cpp  EventDetector.cpp
PARANOID/src/sources/Factories/: DetectorsFactory.cpp
PARANOID/src/sources/Windows/: MainWindow.cpp
PARANOID/tests/: CMakeLists.txt  LetterButtonTests.cpp  main.cpp
PARANOID/tests/UT/: LetterButtonTests.cpp  LoggerTests.cpp  MainWindowTests.cpp
SPD/PPrzeplywowy/: CMakeLists.txt  Funkcje.cpp  Funkcje.h  Maszyna.cpp  Maszyna.h  Zadanie.cpp  Zadanie.h  ZbiorZadan.cpp  ZbiorZadan.h  main.cpp
SPD/WiTi/: Analiza.py  CMakeCache.txt  CMakeLists.txt  Funkcje.cpp  Funkcje.h  Makefile  NazwyPlikow.txt  Optima.txt  PlikZWynikami.txt  PlikZWynikamiZap.txt  WiTi  WiTi.cbp  Zadanie.cpp  Zadanie.h  ZbiorZadan.cpp  ZbiorZadan.h  bubblesort.cpp  cmake_install.cmake  dotexa.txt  main.aux  main.cpp  main.out  main.tex  ref.bib  skrypt.py
SPD/Zad1/: CMakeCache.txt  CMakeLists.txt  Makefile  NazwyPlikow.txt  PlikZWynikami.txt  PlikZWynikamiZad2.txt  Wczytywacz.cpp  Wczytywacz.h  Zad1  Zad1.cbp  Zadanie.cpp  Zadanie.h  ZbiorZadan.cpp  ZbiorZadan.h  cmake_install.cmake  main.cpp  nazwy.txt  skrypt.py
SuperFarmer/: .gitignore  CMakeLists.txt
SuperFarmer/src/: CMakeLists.txt  main.cpp
SuperFarmer/src/libbar/: Bank.cpp  Bank.hpp  CMakeLists.txt  bar.hpp
SuperFarmer/test/: CMakeLists.txt
SuperFarmer/test/ut/: BankPlayerTest.cpp  BankTests.cpp  CMakeLists.txt  DiceTests.cpp  GamestateTests.cpp  PlayerTests.cpp
Testownik/: CMakeLists.txt  main.cpp
Testownik/inc/: Base.hh  Button.h  Testownik.h
Testownik/src/: Base.cpp  Button.cpp  Testownik.cpp
WDS/: README.md
WDS/QtWDS/WDS/: WDS.pro  mainwindow.ui
WDS/QtWDS/WDSApp/: Doxyfile  Makefile  WDSApp  WDSApp.pro  condition.cpp  condition.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  port.cpp  port.h  port.ui  qbalancewidget.cpp  qbalancewidget.h
WDS/QtWDS/WDSApp/html/: annotated.html  classCondition-members.html  classCondition.html  classCondition__coll__graph.md5  classCondition__inherit__graph.dot  classMainWindow-members.html  classMainWindow.html  classQCPAbstractItem-members.html  classQCPAbstractItem.html  classQCPAbstractItem__coll__graph.dot  classQCPAbstractItem__coll__graph.md5  classQCPAbstractItem__inherit__graph.dot  classQCPAbstractLegendItem-members.html  classQCPAbstractLegendItem.html  classQCPAbstractLegendItem__coll__graph.dot  classQCPAbstractLegendItem__coll__graph.md5  classQCPAbstractLegendItem__inherit__graph.dot  classQCPAbstractPaintBuffer-members.html  classQCPAbstractPaintBuffer.html  classQCPAbstractPaintBuffer__inherit__graph.dot  classQCPAbstractPlottable-members.html  classQCPAbstractPlottable.html  classQCPAbstractPlottable1D-members.html  classQCPAbstractPlottable1D.html  classQCPAbstractPlottable1D__coll__graph.dot  classQCPAbstractPlottable1D__coll__graph.md5  classQCPAbstractPlottable1D__inherit__graph.dot  classQCPAbstractPlottable__coll__graph.dot  classQCPAbstractPlottable__coll__graph.md5  classQCPAbstractPlottable__inherit__graph.dot  classQCPAxis-members.html  (+343 more)
WDS/QtWDS/build-WDS-Desktop-Debug/: Makefile  WDS  moc_mainwindow.cpp
WDS/QtWDS/build-WDSApp-Desktop-Debug/: Makefile  moc_condition.cpp  moc_config.cpp  moc_mainwindow.cpp  moc_port.cpp  moc_qbalancewidget.cpp  moc_qcustomplot.cpp  qrc_images.cpp  ui_config.h  ui_mainwindow.h  ui_port.h
WDS/SketchWDS/: SketchWDS.ino  readingANDdisplaying.ino
WDS/SketchWDS/readingANDdisplaying/: readingANDdisplaying.ino
(+258 files in other folders)
