cmake_minimum_required(VERSION 3.8)
project(Testownik)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp src/Base.cpp inc/Base.hh src/Button.cpp inc/Button.h src/Testownik.cpp inc/Testownik.h)
set(Boost_USE_STATIC_LIBS        ON) # only find static libs
set(Boost_USE_MULTITHREADED      ON)
set(Boost_USE_STATIC_RUNTIME    OFF)
find_package(Boost 1.62.0 COMPONENTS filesystem)
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    add_executable(Testownik ${SOURCE_FILES})
    target_link_libraries(Testownik ${Boost_LIBRARIES})
endif()
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}")
find_package(SFML REQUIRED system window graphics network audio)
if (SFML_FOUND)
    include_directories(${SFML_INCLUDE_DIR})
    target_link_libraries(Testownik ${SFML_LIBRARIES})
endif()